# galaxy-menu

./: Cargo.toml  README.md  ideas.txt  org.kde.kwin.xml  prereqs.txt
dbus-codegen/: Info.txt
src/: main.rs  warp_gate.glade
src/modules/: Messages.rs  bus_interface.rs  dbus_handler.rs  dbus_proxy.rs  galaxymenuawesome.rs  kwin.rs  mod.rs
src/modules/proxys/: galaxymenuawesome.rs  kde.rs  mod.rs
