[package]
name = "galaxy-menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
async-trait = "0.1.5"
async-std = { version = "1.11.0", features = ["attributes"] }
crossbeam-channel = "0.5"
futures = "0.3"
workctl = "0.2"
zbus = "2.2.0"


[features]
default = ["kde"]
kde = []
awesome = []
gnome = []